# flamino

./: .gitignore  README.md  pyproject.toml
experiments/: esm2_l6_d512.toml  training_conf.toml  uniparc_data.toml
notebooks/: 01_training_loop.ipynb
src/flamino/: io.py  rope.py  training.py  transformer.py  vocab.py
src/flamino/cli/: __main__.py  data.py  train.py
src/flamino/conf/: __init__.py  dataset.py  load.py  model.py  training.py
src/flamino/data/: __init__.py  datasource.py  transforms.py
src/flamino/models/: __init__.py
src/flamino/models/esm2/: __init__.py
src/jxesm2/: __init__.py  vocab.py
tests/: conftest.py  test_datasource.py  test_esm2.py  test_rope.py  test_transformer.py  test_vocab.py
tests/test_data/: test_fasta1.fa.gz.fai  test_fasta1.fa.gz.gzi  test_fasta2.fa.gz.fai
